--- a/test/testDish.html
+++ b/test/testDish.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <button id="bt1">获取所有菜品</button>
+  <button id="bt1">获取所有菜品名字</button>
   <button id="bt2">获取某一道菜品</button>
 
   <hr>
